--- a/frontend/src/app/components/filter/categories-filter/categories-filter.component.html
+++ b/frontend/src/app/components/filter/categories-filter/categories-filter.component.html
@@ -3,7 +3,7 @@
         <a
           class="widget__tagcloud--link"
           [class.active]="isSelected(item)"
-          [attr.aria-label]="'Select brand ' + item"
+          [attr.aria-label]="'Select item ' + item"
           (click)="onBrandClick(item); $event.preventDefault()"
         >
           {{ item }}
