--- a/frontend/src/app/pages/products/component/product-list-header/product-list-header.component.scss
+++ b/frontend/src/app/pages/products/component/product-list-header/product-list-header.component.scss
@@ -153,6 +153,12 @@
 
 
 
+.product__search {
+	min-width: 300px;
+	flex: 1;
+	max-width: 400px;
+}
+
 .product__showing--count {
 	font-weight: 500;
 	letter-spacing: .5px
