--- a/frontend/src/app/components/table/table.component.html
+++ b/frontend/src/app/components/table/table.component.html
@@ -25,8 +25,7 @@
                 <span class="cart__price">{{ row.price }}</span>
             </td>
             <td class="cart__table--body__list">
-                <!-- <app-quantity-box [quantity]="row.quantity"></app-quantity-box> -->
-                <app-quantity-box></app-quantity-box>
+                <app-quantity-box [quantity]="row.quantity" (quantityChange)="onQuantityChange(row.product.productId, $event)"></app-quantity-box>
             </td>
             <td class="cart__table--body__list">
                 <span class="cart__price end">{{ row.total }}</span>
