--- a/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -4,7 +4,9 @@
     <div class="dashboard__header">
       <div class="header__content">
         <div class="user__info">
-          <img [src]="user.avatar" [alt]="user.name" class="user__avatar">
+          <div class="user__avatar-wrapper">
+            <img [src]="user.avatar" [alt]="user.name" class="user__avatar" />
+          </div>
           <div class="user__details">
             <h1 class="user__name">Welcome back, {{ user.name }}!</h1>
             <p class="user__email">{{ user.email }}</p>
@@ -31,7 +33,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="col-lg-3 col-md-6">
           <div class="stat__card warning">
             <div class="stat__icon">
@@ -43,7 +45,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="col-lg-3 col-md-6">
           <div class="stat__card success">
             <div class="stat__icon">
@@ -55,7 +57,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="col-lg-3 col-md-6">
           <div class="stat__card info">
             <div class="stat__icon">
@@ -80,7 +82,7 @@
               Quick Actions
             </h2>
           </div>
-          
+
           <div class="quick__actions">
             <div class="row g-3">
               <div class="col-md-6" *ngFor="let action of quickActions">
@@ -114,7 +116,7 @@
               View All
             </button>
           </div>
-          
+
           <div class="orders__list">
             <div class="order__item" *ngFor="let order of recentOrders">
               <div class="order__header">
@@ -148,7 +150,7 @@
             <p class="feature__description">On orders over $50</p>
           </div>
         </div>
-        
+
         <div class="col-md-4">
           <div class="feature__card">
             <div class="feature__icon">
@@ -158,7 +160,7 @@
             <p class="feature__description">30-day return policy</p>
           </div>
         </div>
-        
+
         <div class="col-md-4">
           <div class="feature__card">
             <div class="feature__icon">
