--- a/frontend/src/app/pages/products/component/product-card/product-card.component.scss
+++ b/frontend/src/app/pages/products/component/product-card/product-card.component.scss
@@ -281,6 +281,25 @@
   }
 }
 
+.product__items--list {
+  flex-direction: row;
+  align-items: center;
+  min-height: 160px;
+  .product__items--thumbnail {
+    width: 120px;
+    min-width: 120px;
+    height: 120px;
+    margin: 16px;
+  }
+  .product__items--content {
+    flex: 1;
+    padding: 1.5rem 2rem 1.5rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
 // Responsive Design
 @media (max-width: 768px) {
   .product__items--content {
