--- a/frontend/src/app/pages/products/component/product-card/product-card.component.html
+++ b/frontend/src/app/pages/products/component/product-card/product-card.component.html
@@ -1,61 +1,65 @@
-<div class="product__items">
+<ng-container [ngSwitch]="viewMode">
+  <!-- Grid View -->
+  <div *ngSwitchCase="'grid'" class="product__items">
     <div class="product__items--thumbnail">
       <a class="product__items--link" (click)="viewProduct(); $event.preventDefault()">
-        <img
-          class="product__items--img product__primary--img"
-          [src]="getProductImage()"
-          [alt]="product.name"
-        />
-        <!-- [src]="product.image_urls[1] ? imageURL + '/' + product.image_urls[1] : getProductImage()" -->
-        <img class="product__items--img product__secondary--img" 
-            [src]="getProductImage()"
-            [alt]="product.name">
+        <img class="product__items--img product__primary--img" [src]="getProductImage()" [alt]="product.name" />
+        <img class="product__items--img product__secondary--img"
+          [src]="imageURL+'/'+product.image_urls[1] || getProductImage()" [alt]="product.name" />
       </a>
-      <!-- <div class="product__badge" *ngIf="product.isOnSale">
-        <span class="product__badge--items sale">Sale</span>
-      </div> -->
     </div>
-    <div class="product__items--content">
-      <!-- <span class="product__items--content__subtitle">{{ product.subtitle }}</span> -->
-      <h3 class="product__items--content__title h4">
-        <p (click)="viewProduct(); $event.preventDefault()">
-          {{ product.name }}
-        </p>
-      </h3>
-      <div class="product__items--price">
-        <span class="current__price">{{ product.base_price }}</span>
-        <span class="old__price" *ngIf="product.sale_price">{{ product.sale_price }}</span>
+
+    <!-- Shared Content -->
+    <ng-container *ngTemplateOutlet="cardContent"></ng-container>
+  </div>
+
+  <!-- List View -->
+  <div class="product-list-card">
+    <div *ngSwitchCase="'list'" class="product__items">
+      <div class="product__items--thumbnail">
+        <a class="product__items--link" (click)="viewProduct(); $event.preventDefault()">
+          <img class="product__items--img product__primary--img" [src]="getProductImage()" [alt]="product.name" />
+          <img class="product__items--img product__secondary--img"
+            [src]="imageURL+'/'+product.image_urls[1] || getProductImage()" [alt]="product.name" />
+        </a>
       </div>
-      <app-rating class="product__rating"></app-rating>
-      <ul class="product__items--action d-flex">
-        <li class="product__items--action__list">
-          <a
-            class="product__items--action__btn add__to--cart"
-            (click)="onAddToCart(); $event.preventDefault()"
-          >
-            <i class="bi bi-cart3 product__items--action__btn--i"></i>
-            <span class="add__to--cart__text"> + Add to cart</span>
-          </a>
-        </li>
-        <li class="product__items--action__list">
-          <a
-            class="product__items--action__btn"
-            (click)="onAddToWishlist(); $event.preventDefault()"
-          >
-            <i class="bi bi-heart"></i>
-            <span class="visually-hidden">Wishlist</span>
-          </a>
-        </li>
-        <li class="product__items--action__list">
-          <a
-            class="product__items--action__btn"
-            href="javascript:void(0)"
-            (click)="onQuickView()"
-          >
-            <i class="bi bi-eye"></i>
-            <span class="visually-hidden">Quick View</span>
-          </a>
-        </li>
-      </ul>
+
+      <!--Shared Content -->
+      <ng-container *ngTemplateOutlet="cardContent"></ng-container>
     </div>
   </div>
+</ng-container>
+
+<!--TemplateRef: Shared Content -->
+<ng-template #cardContent>
+  <div class="product__items--content">
+    <h3 class="product__items--content__title h4">
+      <p (click)="viewProduct(); $event.preventDefault()">{{ product.name }}</p>
+    </h3>
+
+    <div class="product__items--price">
+      <span class="current__price">{{ product.base_price }}</span>
+      <span class="old__price" *ngIf="product.sale_price">{{ product.sale_price }}</span>
+    </div>
+
+    <app-rating class="product__rating"></app-rating>
+
+    <ul class="product__items--action d-flex">
+      <li>
+        <a class="product__items--action__btn add__to--cart" (click)="onAddToCart(); $event.preventDefault()">
+          <i class="bi bi-cart3"></i><span> + Add to cart</span>
+        </a>
+      </li>
+      <li>
+        <a class="product__items--action__btn" (click)="onAddToWishlist(); $event.preventDefault()">
+          <i class="bi bi-heart"></i>
+        </a>
+      </li>
+      <li>
+        <a class="product__items--action__btn" (click)="onQuickView(); $event.preventDefault()">
+          <i class="bi bi-eye"></i>
+        </a>
+      </li>
+    </ul>
+  </div>
+</ng-template>
