--- a/frontend/src/app/pages/products/component/product-card/product-card.component.scss
+++ b/frontend/src/app/pages/products/component/product-card/product-card.component.scss
@@ -333,3 +333,25 @@
     padding: 0.5rem;
   }
 }
+
+.product-list-card {
+  .product__items {
+    flex-direction: row;
+    margin-bottom: 1.5rem;
+    padding: 1rem;
+  }
+
+  .product__items--thumbnail {
+    width: 140px;
+    height: auto;
+    flex-shrink: 0;
+    margin-right: 1.5rem;
+  }
+
+  .product__items--img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+  }
+}
