--- a/frontend/src/app/components/header/header-top/header-top.component.html
+++ b/frontend/src/app/components/header/header-top/header-top.component.html
@@ -12,11 +12,11 @@
             <span>SHARKCART</span>
         </div>
 
-        <div class="search-bar">
+        <!-- <div class="search-bar">
             <app-dropdown-filter [items]="dropDownList" [defaultOption]="dropDownList[0]"></app-dropdown-filter>
             <app-search-box [placeholder]="'Keyword Here..'" [size]="'large'"
                 (search)="onSearch($event)"></app-search-box>
-        </div>
+        </div> -->
 
         <div class="header__account header__sticky--none">
             <ul class="d-flex">
