--- a/frontend/src/app/features/register/register.component.html
+++ b/frontend/src/app/features/register/register.component.html
@@ -77,7 +77,7 @@
             <i class="bi bi-phone input-icon"></i>
             <input 
               id="contact" 
-              type="number" 
+              type="tel" 
               formControlName="contact" 
               class="form-input with-prefix" 
               placeholder="Enter mobile number"
